# ros_viz_3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.xml  ros_viz_3d.cpp  ros_viz_3d.h
files/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt  ta_log_T1.txt  ta_log_T2.txt
files/2_2_ta/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt
files/demo2/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt  ta_log_AGENTE3.txt  ta_log_T1.txt  ta_log_T2.txt  ta_log_T3.txt  ta_log_T4.txt  ta_log_T5.txt
files/demo3/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt  ta_log_T2.txt  ta_log_T4.txt  ta_log_T5.txt
files/demo4/: ta_log_AGENTE3.txt  ta_log_T1.txt  ta_log_T3.txt
files/fig_3/: ta_log_T2.txt
files/fig_4/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt  ta_log_T1.txt
files/fig_5/: ta_log_T1.txt  ta_log_T3.txt  ta_log_T4.txt
files/fig_6/: ta_log_AGENTE1.txt  ta_log_AGENTE2.txt  ta_log_T1.txt  ta_log_T2.txt
files/fig_7/: ta_log_AGENTE2.txt  ta_log_AGENTE3.txt  ta_log_T1.txt  ta_log_T2.txt  ta_log_T3.txt
files/fig_8/: ta_log_AGENTE2.txt  ta_log_AGENTE3.txt  ta_log_T1.txt  ta_log_T2.txt  ta_log_T3.txt
files/old/: ta_log_AGENTE1.txt  ta_log_T2.txt
launch/: ros_viz_3d_rviz.rviz  viz.launch
